# ngx_dbrelay

./: Makefile.in  README  TODO  aclocal.m4  autogen.sh  configure  configure.ac
include/: Makefile.am  Makefile.in  config.h.in  dbrelay_config.h
src/: .gitignore  Makefile.am  Makefile.in  admin.c  client.c  config.in  connector.c  db.c  dbrelay.h  emit.c  json.c  json.h  log.c  main.c  mssql.c  mssql.h  mysql.c  ngx_http_dbrelay_ddebug.h  ngx_http_dbrelay_module.c  odbc.c  shmem.c  socket.c  status.c  stringbuf.c  stringbuf.h  vmysql.h  vodbc.h
src/output/: csv.c  jsonarr.c  jsondict.c
unittest/: example.html  telnet.py  test7.js  test7.sql  testall.sh  unittest.sh
